# sa3-inpainter-ui

./: .gitignore  README.md  design.md  goal.md  main.py  pyproject.toml  research_log.md  run_gradio.py
backend/: server.py
mlx_sa3/: ae.py  nn_blocks.py  weights.py
scratch/: ae_3min_swa_stress.py  compare_ae_deterministic.py  compare_ae_torch.py  compare_block_torch.py  e2e_local.py  e2e_text_to_audio.py  stage_diff.py  swa_correctness.py  test_block.py  test_load_ae.py  trb_internals.py  viz_demo.py
webui/: package-lock.json  package.json  vite.config.js
webui-vanilla/: app.js  index.html  style.css
webui/public/: envelope.json
webui/src/: App.svelte  app.css
webui/src/lib/: BottomBar.svelte  LatentStrip.svelte  MainCanvas.svelte  OverviewWave.svelte  Panel.svelte  RightRail.svelte  TimeAxis.svelte  TopBar.svelte  WaveformCanvas.svelte  session.svelte.js  util.js
