[project]
name = "sa3-mlx"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "fastapi>=0.136.1",
    "huggingface-hub>=1.15.0",
    "matplotlib>=3.10.9",
    "mlx>=0.31.2",
    "numpy>=2.4.6",
    "psutil>=7.2.2",
    "python-multipart>=0.0.29",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "transformers>=5.9.0",
    "uvicorn>=0.47.0",
]
